[webui] Spacing fix for analyses-list

--- a/src/webui/src/sass/main.scss
+++ b/src/webui/src/sass/main.scss
@@ -196,7 +196,7 @@ acmg { display: block; }
   &.pvs { background-color: hsla(0,75,25,1);    }
   &:hover { color: white; border-left: 0.7rem solid hsla(0,0,0,0); }
 }
-.content-list { width: 100%; margin-right: 2.6rem;
+.content-list { display: block; margin: 2rem 2rem; margin-bottom: 0;
   .analysis-row { cursor: pointer; border-bottom: 1px dotted $icon-half-black; margin-bottom: 2.6rem; }
   .analysis-row:last-child { margin-bottom: 1.3rem; }
   h3 { font-size: 1.4rem; font-weight: 500; letter-spacing: 0.035rem; text-transform: none; margin: 0; }
